RESOLVED FIXED139224
REGRESSION(r176687): Caused webkit2 test assertion failure crashes in WebKit::WebPage::willStartDrag()
https://bugs.webkit.org/show_bug.cgi?id=139224
Summary REGRESSION(r176687): Caused webkit2 test assertion failure crashes in WebKit:...
Mark Lam
Reported 2014-12-03 09:22:43 PST
The following tests started crashing with assertion failures after r176687: fast/events/clear-drag-state.html fast/css/user-drag-none.html editing/pasteboard/dataTransfer-setData-getData.html editing/pasteboard/drop-text-events-sideeffect-crash.html editing/pasteboard/drag-drop-iframe-refresh-crash.html editing/pasteboard/drop-text-events-sideeffect.html editing/selection/user-drag-element-and-user-select-none.html
Attachments
Wait for the UI process to begin dragging if needed before handling a synthetic synchronous mouse event (3.18 KB, patch)
2014-12-03 10:53 PST, mitz
ap: review+
Mark Lam
Comment 1 2014-12-03 09:52:37 PST
Updated TestExpectations to expect crashes for these tests in r176723: <http://trac.webkit.org/r176723>.
Alexey Proskuryakov
Comment 2 2014-12-03 09:59:05 PST
I think that a Skip expectation would be more appropriate. Seven tests that crash every time make bots substantially slower, and I suspect that the high system load associated with creating crash logs may destabilize other tests too. So, the better expectations would be (note how they can be limited to debug builds only): webkit.org/b/139224 [ Debug ] fast/events/clear-drag-state.html [ Skip ] ...
Alexey Proskuryakov
Comment 3 2014-12-03 10:00:02 PST
Also, crashes make running tests locally very annoying.
Mark Lam
Comment 4 2014-12-03 10:33:56 PST
Updated TestExpectations to skip tests per Alexey's instructions in r176726: <http://trac.webkit.org/r176726>.
mitz
Comment 5 2014-12-03 10:53:50 PST
Created attachment 242503 [details] Wait for the UI process to begin dragging if needed before handling a synthetic synchronous mouse event
mitz
Comment 6 2014-12-03 11:08:36 PST
Note You need to log in before you can comment on or make changes to this bug.