REGRESSION(r176687): Caused webkit2 test assertion failure crashes in WebKit::WebPage::willStartDrag() https://bugs.webkit.org/show_bug.cgi?id=139224

Reviewed by Alexey Proskuryakov.

Source/WebKit2:

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::mouseEventSyncForTesting): Wait for the UI process to start dragging if
needed before handling the event.

LayoutTests:

* platform/wk2/TestExpectations: Unskip the tests.



Canonical link: https://commits.webkit.org/157074@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176728 268f45cc-cd09-0410-ab3c-d52691b4dbfc